@@ -1,5 +1,4 @@
 {
-    "minimum-stability": "dev",
     "name": "horde/url",
     "description": "URL library",
     "type": "library",
@@ -17,20 +16,15 @@
             "role": "lead"
         }
     ],
-    "time": "2022-10-08",
-    "repositories": [
-        {
-            "type": "composer",
-            "url": "https://horde-satis.maintaina.com"
-        }
-    ],
+    "time": "2024-01-10",
+    "repositories": [],
     "require": {
         "php": "^7.4 || ^8",
-        "horde/exception": "^3 || dev-FRAMEWORK_6_0"
+        "horde/exception": "^3"
     },
     "require-dev": {},
     "suggest": {
-        "horde/test": "^3 || dev-FRAMEWORK_6_0"
+        "horde/test": "^3"
     },
     "autoload": {
         "psr-0": {
