@@ -4,12 +4,13 @@
   state:
     release: alpha
     api: alpha
-  date: 2022-10-08
+  date: 2024-01-10
   license:
     identifier: LGPL-2.1
     uri: http://www.horde.org/licenses/lgpl21
-  notes: |+
-    
+  notes: |
+    [rla] Drop own implementation of query string formatting in favour of PHP builtin solution.
+    |+
 3.0.0alpha4:
   api: 3.0.0alpha1
   state:
